[project]
name = "cart"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Iztok Bajcar", email = "iztok.bajcar@gmail.com" }]
dependencies = ["fastapi>=0.115.6", "uvicorn>=0.34.0", "pymongo>=4.10.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
api = { cmd = "src/rso_cart/api.py", env = { "PYTHONPATH" = "src" } }
test = "tox"
